[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/RockTurtle.gd" type="Script" id=1]
[ext_resource path="res://Assets/TurtleRockEnemy/05.png" type="Texture" id=2]
[ext_resource path="res://Assets/TurtleRockEnemy/02.png" type="Texture" id=3]
[ext_resource path="res://Assets/TurtleRockEnemy/04.png" type="Texture" id=4]
[ext_resource path="res://Assets/TurtleRockEnemy/03.png" type="Texture" id=5]
[ext_resource path="res://Assets/TurtleRockEnemy/01.png" type="Texture" id=6]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "RockTurtleAttack"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 6 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 95.7396, 115.451 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7.71462, 9.52539 )

[sub_resource type="CircleShape2D" id=6]
radius = 116.101

[node name="RockTurtle" type="Node2D"]
scale = Vector2( 0.177565, 0.177565 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.996148, 1 )
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/RockTurtleAttack = SubResource( 3 )

[node name="TurtleVision" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 16
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurtleVision"]
position = Vector2( -168.952, -2.81588 )
shape = SubResource( 5 )

[node name="AttackTimer" type="Timer" parent="."]

[node name="Hurtbox" type="Area2D" parent="."]
light_mask = 2
collision_layer = 18
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( -2.81587, -2.81587 )
scale = Vector2( 14.9652, 7.98167 )
shape = SubResource( 4 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -146.425, 0 )
shape = SubResource( 6 )
disabled = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="TurtleVision" to="." method="_on_TurtleVision_area_entered"]
[connection signal="area_exited" from="TurtleVision" to="." method="_on_TurtleVision_area_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_DamageZone_area_entered"]
